[tool.poetry]
name = "op-wiki-bot"
version = "0.1.0"
description = ""
authors = ["Nelson Chen <crazysim@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.308"
faiss-cpu = "^1.7.4"
openai = "^0.27.7"
tiktoken = "^0.4.0"
streamlit = "^1.22.0"
streamlit-chat = "^0.0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
